Algumas mudancas
