# Event/webapi.event+/Repositories/EventoRepository.cs
@@ -128,5 +128,18 @@ namespace webapi.event_.Repositories
                 throw;
             }
         }
+
+        public List<Evento> ListarAntigos()
+        {
+            try
+            {
+                return _context.Evento
+                    .Where(e => e.DataEvento < DateTime.Now).ToList();
+            }
+            catch (Exception)
+            {
+                throw;
+            }
+        }
     }
 }
